proj1/geom_python/GeomParser.py
# Generated from Geom.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GeomParser ( Parser ):

    grammarFileName = "Geom.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'of'", "'Interval'", "<INVALID>", 
                     "'Main'", "'Function'", "'Constraint'", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "';'", "'if'", "'then'", 
                     "'else'", "'Point'", "'Polyhedron'", "'!'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'or'", "'and'", 
                     "'<'", "'>='", "'<='", "'!='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "WS", "MAIN", "FUNC", "CONS", "LPAR", "RPAR", "LBRA", 
                      "RBRA", "LA", "RA", "COMMA", "SEMICOLON", "IF", "THEN", 
                      "ELSE", "POINT", "POLYHEDRON", "NOT", "EQUAL", "PLUS", 
                      "MINUS", "MUL", "DIV", "MOD", "G", "OR", "AND", "L", 
                      "GE", "LE", "DIFF", "BOOLEAN", "ID", "VARID", "DQUOTE", 
                      "STRING", "CHAR", "NUMERIC" ]

    RULE_main = 0
    RULE_consdecl = 1
    RULE_interpointconsdecl = 2
    RULE_intervaldecl = 3
    RULE_lindecl = 4
    RULE_numericValue = 5
    RULE_leftexpr = 6
    RULE_rightexpr = 7
    RULE_booleq = 8
    RULE_int_comp_op = 9
    RULE_booldecl = 10
    RULE_num_op = 11
    RULE_linop = 12
    RULE_exprent = 13
    RULE_consexpr = 14
    RULE_exprcomp = 15
    RULE_exprbool = 16

    ruleNames =  [ "main", "consdecl", "interpointconsdecl", "intervaldecl", 
                   "lindecl", "numericValue", "leftexpr", "rightexpr", "booleq", 
                   "int_comp_op", "booldecl", "num_op", "linop", "exprent", 
                   "consexpr", "exprcomp", "exprbool" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    WS=4
    MAIN=5
    FUNC=6
    CONS=7
    LPAR=8
    RPAR=9
    LBRA=10
    RBRA=11
    LA=12
    RA=13
    COMMA=14
    SEMICOLON=15
    IF=16
    THEN=17
    ELSE=18
    POINT=19
    POLYHEDRON=20
    NOT=21
    EQUAL=22
    PLUS=23
    MINUS=24
    MUL=25
    DIV=26
    MOD=27
    G=28
    OR=29
    AND=30
    L=31
    GE=32
    LE=33
    DIFF=34
    BOOLEAN=35
    ID=36
    VARID=37
    DQUOTE=38
    STRING=39
    CHAR=40
    NUMERIC=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class MainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(GeomParser.MAIN, 0)

        def LBRA(self):
            return self.getToken(GeomParser.LBRA, 0)

        def RBRA(self):
            return self.getToken(GeomParser.RBRA, 0)

        def consdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeomParser.ConsdeclContext)
            else:
                return self.getTypedRuleContext(GeomParser.ConsdeclContext,i)


        def interpointconsdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeomParser.InterpointconsdeclContext)
            else:
                return self.getTypedRuleContext(GeomParser.InterpointconsdeclContext,i)


        def intervaldecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeomParser.IntervaldeclContext)
            else:
                return self.getTypedRuleContext(GeomParser.IntervaldeclContext,i)


        def getRuleIndex(self):
            return GeomParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = GeomParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_main)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(GeomParser.MAIN)
            self.state = 35
            self.match(GeomParser.LBRA)
            self.state = 37 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.consdecl()
                self.state = 39 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==7):
                    break

            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3 or _la==36:
                self.state = 43
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [36]:
                    self.state = 41
                    self.interpointconsdecl()
                    pass
                elif token in [3]:
                    self.state = 42
                    self.intervaldecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 48
            self.match(GeomParser.RBRA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConsdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONS(self):
            return self.getToken(GeomParser.CONS, 0)

        def ID(self):
            return self.getToken(GeomParser.ID, 0)

        def LBRA(self):
            return self.getToken(GeomParser.LBRA, 0)

        def RBRA(self):
            return self.getToken(GeomParser.RBRA, 0)

        def lindecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeomParser.LindeclContext)
            else:
                return self.getTypedRuleContext(GeomParser.LindeclContext,i)


        def getRuleIndex(self):
            return GeomParser.RULE_consdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsdecl" ):
                listener.enterConsdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsdecl" ):
                listener.exitConsdecl(self)




    def consdecl(self):

        localctx = GeomParser.ConsdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_consdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(GeomParser.CONS)
            self.state = 51
            self.match(GeomParser.ID)
            self.state = 52
            self.match(GeomParser.T__0)
            self.state = 53
            self.match(GeomParser.LBRA)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2267759509504) != 0):
                self.state = 54
                self.lindecl()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(GeomParser.RBRA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InterpointconsdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GeomParser.ID)
            else:
                return self.getToken(GeomParser.ID, i)

        def int_comp_op(self):
            return self.getTypedRuleContext(GeomParser.Int_comp_opContext,0)


        def SEMICOLON(self):
            return self.getToken(GeomParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_interpointconsdecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInterpointconsdecl" ):
                listener.enterInterpointconsdecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInterpointconsdecl" ):
                listener.exitInterpointconsdecl(self)




    def interpointconsdecl(self):

        localctx = GeomParser.InterpointconsdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_interpointconsdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(GeomParser.ID)
            self.state = 63
            self.match(GeomParser.T__1)
            self.state = 64
            self.match(GeomParser.ID)
            self.state = 65
            self.int_comp_op()
            self.state = 66
            self.match(GeomParser.ID)
            self.state = 67
            self.match(GeomParser.T__1)
            self.state = 68
            self.match(GeomParser.ID)
            self.state = 69
            self.match(GeomParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntervaldeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GeomParser.ID)
            else:
                return self.getToken(GeomParser.ID, i)

        def EQUAL(self):
            return self.getToken(GeomParser.EQUAL, 0)

        def LA(self):
            return self.getToken(GeomParser.LA, 0)

        def numericValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeomParser.NumericValueContext)
            else:
                return self.getTypedRuleContext(GeomParser.NumericValueContext,i)


        def COMMA(self):
            return self.getToken(GeomParser.COMMA, 0)

        def RA(self):
            return self.getToken(GeomParser.RA, 0)

        def SEMICOLON(self):
            return self.getToken(GeomParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_intervaldecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntervaldecl" ):
                listener.enterIntervaldecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntervaldecl" ):
                listener.exitIntervaldecl(self)




    def intervaldecl(self):

        localctx = GeomParser.IntervaldeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_intervaldecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(GeomParser.T__2)
            self.state = 72
            self.match(GeomParser.ID)
            self.state = 73
            self.match(GeomParser.T__1)
            self.state = 74
            self.match(GeomParser.ID)
            self.state = 75
            self.match(GeomParser.EQUAL)
            self.state = 76
            self.match(GeomParser.LA)
            self.state = 77
            self.numericValue()
            self.state = 78
            self.match(GeomParser.COMMA)
            self.state = 79
            self.numericValue()
            self.state = 80
            self.match(GeomParser.RA)
            self.state = 81
            self.match(GeomParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LindeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def leftexpr(self):
            return self.getTypedRuleContext(GeomParser.LeftexprContext,0)


        def int_comp_op(self):
            return self.getTypedRuleContext(GeomParser.Int_comp_opContext,0)


        def numericValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeomParser.NumericValueContext)
            else:
                return self.getTypedRuleContext(GeomParser.NumericValueContext,i)


        def SEMICOLON(self):
            return self.getToken(GeomParser.SEMICOLON, 0)

        def rightexpr(self):
            return self.getTypedRuleContext(GeomParser.RightexprContext,0)


        def linop(self):
            return self.getTypedRuleContext(GeomParser.LinopContext,0)


        def getRuleIndex(self):
            return GeomParser.RULE_lindecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLindecl" ):
                listener.enterLindecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLindecl" ):
                listener.exitLindecl(self)




    def lindecl(self):

        localctx = GeomParser.LindeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lindecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.leftexpr()
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 84
                self.rightexpr()


            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23 or _la==24:
                self.state = 87
                self.linop()
                self.state = 88
                self.numericValue()


            self.state = 92
            self.int_comp_op()
            self.state = 93
            self.numericValue()
            self.state = 94
            self.match(GeomParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumericValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMERIC(self, i:int=None):
            if i is None:
                return self.getTokens(GeomParser.NUMERIC)
            else:
                return self.getToken(GeomParser.NUMERIC, i)

        def MINUS(self):
            return self.getToken(GeomParser.MINUS, 0)

        def COMMA(self):
            return self.getToken(GeomParser.COMMA, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_numericValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericValue" ):
                listener.enterNumericValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericValue" ):
                listener.exitNumericValue(self)




    def numericValue(self):

        localctx = GeomParser.NumericValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_numericValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24:
                self.state = 96
                self.match(GeomParser.MINUS)


            self.state = 99
            self.match(GeomParser.NUMERIC)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 100
                self.match(GeomParser.COMMA)
                self.state = 101
                self.match(GeomParser.NUMERIC)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LeftexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GeomParser.ID, 0)

        def numericValue(self):
            return self.getTypedRuleContext(GeomParser.NumericValueContext,0)


        def MINUS(self):
            return self.getToken(GeomParser.MINUS, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_leftexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLeftexpr" ):
                listener.enterLeftexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLeftexpr" ):
                listener.exitLeftexpr(self)




    def leftexpr(self):

        localctx = GeomParser.LeftexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_leftexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 104
                self.numericValue()

            elif la_ == 2:
                self.state = 105
                self.match(GeomParser.MINUS)


            self.state = 108
            self.match(GeomParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RightexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linop(self):
            return self.getTypedRuleContext(GeomParser.LinopContext,0)


        def ID(self):
            return self.getToken(GeomParser.ID, 0)

        def numericValue(self):
            return self.getTypedRuleContext(GeomParser.NumericValueContext,0)


        def getRuleIndex(self):
            return GeomParser.RULE_rightexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRightexpr" ):
                listener.enterRightexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRightexpr" ):
                listener.exitRightexpr(self)




    def rightexpr(self):

        localctx = GeomParser.RightexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rightexpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.linop()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==24 or _la==41:
                self.state = 111
                self.numericValue()


            self.state = 114
            self.match(GeomParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooleqContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DIFF(self):
            return self.getToken(GeomParser.DIFF, 0)

        def EQUAL(self):
            return self.getToken(GeomParser.EQUAL, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_booleq

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleq" ):
                listener.enterBooleq(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleq" ):
                listener.exitBooleq(self)




    def booleq(self):

        localctx = GeomParser.BooleqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_booleq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not(_la==22 or _la==34):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Int_comp_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def G(self):
            return self.getToken(GeomParser.G, 0)

        def GE(self):
            return self.getToken(GeomParser.GE, 0)

        def L(self):
            return self.getToken(GeomParser.L, 0)

        def LE(self):
            return self.getToken(GeomParser.LE, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_int_comp_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt_comp_op" ):
                listener.enterInt_comp_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt_comp_op" ):
                listener.exitInt_comp_op(self)




    def int_comp_op(self):

        localctx = GeomParser.Int_comp_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_int_comp_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 15300820992) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooldeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(GeomParser.BOOLEAN, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_booldecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooldecl" ):
                listener.enterBooldecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooldecl" ):
                listener.exitBooldecl(self)




    def booldecl(self):

        localctx = GeomParser.BooldeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_booldecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(GeomParser.BOOLEAN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Num_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(GeomParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(GeomParser.MINUS, 0)

        def DIV(self):
            return self.getToken(GeomParser.DIV, 0)

        def MUL(self):
            return self.getToken(GeomParser.MUL, 0)

        def MOD(self):
            return self.getToken(GeomParser.MOD, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_num_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNum_op" ):
                listener.enterNum_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNum_op" ):
                listener.exitNum_op(self)




    def num_op(self):

        localctx = GeomParser.Num_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_num_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 260046848) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(GeomParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(GeomParser.MINUS, 0)

        def getRuleIndex(self):
            return GeomParser.RULE_linop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinop" ):
                listener.enterLinop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinop" ):
                listener.exitLinop(self)




    def linop(self):

        localctx = GeomParser.LinopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_linop)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not(_la==23 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPAR(self):
            return self.getToken(GeomParser.LPAR, 0)

        def exprent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeomParser.ExprentContext)
            else:
                return self.getTypedRuleContext(GeomParser.ExprentContext,i)


        def RPAR(self):
            return self.getToken(GeomParser.RPAR, 0)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(GeomParser.MINUS)
            else:
                return self.getToken(GeomParser.MINUS, i)

        def numericValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GeomParser.NumericValueContext)
            else:
                return self.getTypedRuleContext(GeomParser.NumericValueContext,i)


        def num_op(self):
            return self.getTypedRuleContext(GeomParser.Num_opContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GeomParser.ID)
            else:
                return self.getToken(GeomParser.ID, i)

        def getRuleIndex(self):
            return GeomParser.RULE_exprent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprent" ):
                listener.enterExprent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprent" ):
                listener.exitExprent(self)



    def exprent(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = GeomParser.ExprentContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_exprent, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.state = 127
                self.match(GeomParser.LPAR)
                self.state = 128
                self.exprent(0)
                self.state = 129
                self.match(GeomParser.RPAR)
                pass

            elif la_ == 2:
                self.state = 131
                self.match(GeomParser.MINUS)
                self.state = 132
                self.match(GeomParser.LPAR)
                self.state = 133
                self.exprent(0)
                self.state = 134
                self.match(GeomParser.RPAR)
                pass

            elif la_ == 3:
                self.state = 136
                self.numericValue()
                self.state = 137
                self.num_op()
                self.state = 138
                self.numericValue()
                pass

            elif la_ == 4:
                self.state = 140
                self.numericValue()
                self.state = 141
                self.num_op()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 142
                    self.match(GeomParser.MINUS)


                self.state = 145
                self.match(GeomParser.ID)
                pass

            elif la_ == 5:
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 147
                    self.match(GeomParser.MINUS)


                self.state = 150
                self.match(GeomParser.ID)
                self.state = 151
                self.num_op()
                self.state = 152
                self.numericValue()
                pass

            elif la_ == 6:
                self.state = 155
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 154
                    self.match(GeomParser.MINUS)


                self.state = 157
                self.match(GeomParser.ID)
                self.state = 158
                self.num_op()
                self.state = 160
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 159
                    self.match(GeomParser.MINUS)


                self.state = 162
                self.match(GeomParser.ID)
                pass

            elif la_ == 7:
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==24:
                    self.state = 164
                    self.match(GeomParser.MINUS)


                self.state = 167
                self.match(GeomParser.ID)
                pass

            elif la_ == 8:
                self.state = 168
                self.numericValue()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = GeomParser.ExprentContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_exprent)
                    self.state = 171
                    if not self.precpred(self._ctx, 3):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                    self.state = 172
                    self.num_op()
                    self.state = 173
                    self.exprent(4) 
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ConsexprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprent(self):
            return self.getTypedRuleContext(GeomParser.ExprentContext,0)


        def getRuleIndex(self):
            return GeomParser.RULE_consexpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConsexpr" ):
                listener.enterConsexpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConsexpr" ):
                listener.exitConsexpr(self)




    def consexpr(self):

        localctx = GeomParser.ConsexprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_consexpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.exprent(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprcompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
